--- a/script/install
+++ b/script/install
@@ -5,26 +5,35 @@
 #=================================================
 # IMPORT GENERIC HELPERS
 #=================================================
+
 source _common.sh
 source /usr/share/yunohost/helpers
+
+#=================================================
+# MANAGE SCRIPT FAILURE
+#=================================================
 
 # Exit if an error occurs during the execution of the script
 ynh_abort_if_errors
 
-# Retrieve arguments
+#=================================================
+# RETRIEVE ARGUMENTS FROM THE MANIFEST
+#=================================================
+
 domain=$YNH_APP_ARG_DOMAIN
 path_url=$YNH_APP_ARG_PATH
 admin=$YNH_APP_ARG_ADMIN
-password=$YNH_APP_ARG_PASSWORD
-is_public=$5
-final_path=/var/www/$app
-db_user=emailPoubelle
-cronline="0 */2 * * * www-data cd $final_path/www/; /usr/bin/php index.php > /dev/null 2>&1"
+is_public=$YNH_APP_ARG_IS_PUBLIC
+#language=$YNH_APP_ARG_LANGUAGE
+#password=$YNH_APP_ARG_PASSWORD
+app=$YNH_APP_INSTANCE_NAME
 
 #=================================================
 # CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
 #=================================================
 
+### If the app uses nginx as web server (written in HTML/PHP in most cases), the final path should be "/var/www/$app".
+### If the app provides an internal web server (or uses another application server such as uwsgi), the final path should be "/opt/yunohost/$app"
 final_path=/var/www/$app
 test ! -e "$final_path" || ynh_die "This path already contains a folder"
 
@@ -36,9 +45,6 @@ ynh_webpath_available $domain $path_url
 # Register (book) web path
 ynh_webpath_register $app $domain $path_url
 
-# Check user
-ynh_user_exists "$admin"
-
 #=================================================
 # STORE SETTINGS FROM MANIFEST
 #=================================================
@@ -47,109 +53,170 @@ ynh_app_setting_set $app domain $domain
 ynh_app_setting_set $app path $path_url
 ynh_app_setting_set $app admin $admin
 ynh_app_setting_set $app is_public $is_public
-ynh_app_setting_set $app db_name $db_user
+
+#=================================================
+# STANDARD MODIFICATIONS
+#=================================================
+# FIND AND OPEN A PORT
+#=================================================
+
+### Use these lines if you have to open a port for the application
+### `ynh_find_port` will find the first available port starting from the given port.
+### If you're not using these lines:
+###		- Remove the section "CLOSE A PORT" in the remove script
+
+# Find a free port
+port=$(ynh_find_port 8083)
+# Open this port
+yunohost firewall allow --no-upnp TCP $port 2>&1
+ynh_app_setting_set $app port $port
+
+#=================================================
+# DOWNLOAD, CHECK AND UNPACK SOURCE
+#=================================================
+
+### `ynh_setup_source` is used to install an app from a zip or tar.gz file,
+### downloaded from an upstream source, like a git repository.
+### `ynh_setup_source` use the file conf/app.src
+
 ynh_app_setting_set $app final_path $final_path
+# Download, check integrity, uncompress and patch the source from app.src
+ynh_setup_source "$final_path"
+
 
 #=================================================
-#INSTALL DEPENDENCIES
+# INSTALL DEPENDENCIES
 #=================================================
 
-ynh_install_app_dependencies $pkg_dependencies
+### `ynh_install_app_dependencies` allows you to add any "apt" dependencies to the package.
+### Those deb packages will be installed as dependencies of this package.
+### If you're not using this helper:
+###		- Remove the section "REMOVE DEPENDENCIES" in the remove script
+###		- As well as the section "REINSTALL DEPENDENCIES" in the restore script
+###		- And the section "UPGRADE DEPENDENCIES" in the upgrade script
 
-#install locale (nginx will restart at the end of the install)
-for i in $lang ; do
- ynh_replace_string "# $i" "$i" /etc/locale.gen
-done
-locale-gen
+#ynh_install_app_dependencies deb1 deb2
+#pip install --target vendor -r $final_path requirements.txt
+
+
 
 #=================================================
-#INSTALL SOURCES
-#===============================================
-# Copy source files
-sudo mkdir -p $final_path
-sudo cp -R ../src/* $final_path
-sudo cp ../conf/index_source.php $final_path/www/index.php
-ynh_replace_string "Template-exemple" "$domain" $final_path/www/index.php
+# NGINX CONFIGURATION
+#=================================================
 
-#Temporaire - mettre en config
-ln -s $final_path/lang/fr $final_path/lang/fr_FR
-ln -s $final_path/lang/it $final_path/lang/it_IT
-ln -s $final_path/www/template-exemple $final_path/template-exemple
+### `ynh_add_nginx_config` will use the file conf/nginx.conf
 
-
-#===============================================
-#SETTINGS & DATABASE
-#===============================================
-
-#generating random password for database
-db_pwd=$(ynh_string_random)
-ynh_app_setting_set $app mysqlpwd $db_pwd
-
-#configuring with given settings
-sudo cp $final_path/conf-dist.php $final_path/conf.php
-#Update various conf : domain, database, user and password
-ynh_replace_string "exemple.fr"                  "$domain"                    $final_path/conf.php
-ynh_replace_string "exemple.com"                 "$domain"                    $final_path/conf.php
-ynh_replace_string "define('DB', 'sqlite:'"      "//define('DB', 'sqlite:'"   $final_path/conf.php
-ynh_replace_string "define('ALIASLIMITBYMAIL"    "//define('ALIASLIMITBYMAIL" $final_path/conf.php
-ynh_replace_string "//      define('DB', 'mysql" "      define('DB', 'mysql"  $final_path/conf.php
-ynh_replace_string "//      define('DBUSER',"    "        define('DBUSER',"   $final_path/conf.php
-ynh_replace_string "//      define('DBPASS',"    "        define('DBPASS',"   $final_path/conf.php
-ynh_replace_string "baseMysql"                   "$db_user"                   $final_path/conf.php
-ynh_replace_string "utilisateurMysql"            "$db_user"                   $final_path/conf.php
-ynh_replace_string "motdepassedefou"             "$db_pwd"                    $final_path/conf.php
-ynh_replace_string "define('ADMIN_PASSWORD', 'admin');" "define('ADMIN_PASSWORD', '$password');" $final_path/conf.php
-#setting conf file not world-readable (dude, there is a plain-text password !)
-sudo chmod o-r $final_path/conf.php
-
-#initialize database (databasename = db_user)
-ynh_mysql_create_db $db_user $db_user $db_pwd 
-
-#setting postfix to use virtual aliases file
-sudo cp $postfix $postfix.emailpoubelle.bak #backup it eventually if that causes some issues
-ynh_replace_string "^virtual_alias_maps" "#virtual_alias_maps" $postfix
-echo  "virtual_alias_maps = hash:$final_path/var/virtual" | sudo tee -a $postfix
-
-#create the virtual aliases file 
-sudo touch $final_path/var/virtual
-sudo postmap $final_path/var/virtual
-sudo chown -R www-data:www-data $final_path
-
-#create an alias for deleted junk adresses
-sudo cp /etc/aliases /etc/aliases.emailpoubelle.bak #backup it 
-sudo echo "devnull:/dev/null" | sudo tee -a /etc/aliases
-sudo newaliases
-
-# Modify Nginx configuration file and copy it to Nginx conf directory
-sudo sed -i "s@YNH_EXAMPLE_PATH@$path_url@g" ../conf/nginx.conf
-sudo sed -i "s@YNH_EXAMPLE_ALIAS@$final_path/@g" ../conf/nginx.conf
-sudo cp ../conf/nginx.conf /etc/nginx/conf.d/$domain.d/$app.conf
-
-# Handle root path, avoid double slash.
-# Temporary fix, in waiting for an upgrade of the helper. (#361)
-#path_url_slash_less=${path_url%/}
-#ynh_replace_string "__PATH__/" "$path_url_slash_less/" "../conf/nginx.conf"
-#ynh_replace_string "__FINALPATH__/" "$final_path/www" "../conf/nginx.conf"
 # Create a dedicated nginx config
-#ynh_add_nginx_config
+ynh_add_nginx_config
 
-# If app is public, add url to SSOWat conf as skipped_uris
-if [ "$is_public" = "Yes" ];
+#=================================================
+# CREATE DEDICATED USER
+#=================================================
+
+# Create a system user
+ynh_system_user_create $app
+
+
+#=================================================
+# SPECIFIC SETUP
+#=================================================
+# ...
+#=================================================
+
+#=================================================
+# SETUP SYSTEMD
+#=================================================
+
+### `ynh_systemd_config` is used to configure a systemd script for an app.
+### It can be used for apps that use sysvinit (with adaptation) or systemd.
+### Have a look at the app to be sure this app needs a systemd script.
+### `ynh_systemd_config` will use the file conf/systemd.service
+### If you're not using these lines:
+###		- You can remove those files in conf/.
+###		- Remove the section "BACKUP SYSTEMD" in the backup script
+###		- Remove also the section "STOP AND REMOVE SERVICE" in the remove script
+###		- As well as the section "RESTORE SYSTEMD" in the restore script
+###		- And the section "SETUP SYSTEMD" in the upgrade script
+
+# Create a dedicated systemd config
+#ynh_add_systemd_config
+
+
+#=================================================
+# MODIFY A CONFIG FILE
+#=================================================
+
+### `ynh_replace_string` is used to replace a string in a file.
+### (It's compatible with sed regular expressions syntax)
+
+#ynh_replace_string "match_string" "replace_string" "$final_path/CONFIG_FILE"
+
+#=================================================
+# STORE THE CONFIG FILE CHECKSUM
+#=================================================
+
+### `ynh_store_file_checksum` is used to store the checksum of a file.
+### That way, during the upgrade script, by using `ynh_backup_if_checksum_is_different`,
+### you can make a backup of this file before modifying it again if the admin had modified it.
+
+# Calculate and store the config file checksum into the app settings
+ynh_store_file_checksum "$final_path/CONFIG_FILE"
+
+#=================================================
+# GENERIC FINALIZATION
+#=================================================
+# SECURE FILES AND DIRECTORIES
+#=================================================
+
+### For security reason, any app should set the permissions to root: before anything else.
+### Then, if write authorization is needed, any access should be given only to directories
+### that really need such authorization.
+
+# Set permissions to app files
+chown -R root: $final_path
+
+#=================================================
+# SETUP LOGROTATE
+#=================================================
+
+### `ynh_use_logrotate` is used to configure a logrotate configuration for the logs of this app.
+### Use this helper only if there is effectively a log file for this app.
+### If you're not using this helper:
+###		- Remove the section "BACKUP LOGROTATE" in the backup script
+###		- Remove also the section "REMOVE LOGROTATE CONFIGURATION" in the remove script
+###		- As well as the section "RESTORE THE LOGROTATE CONFIGURATION" in the restore script
+###		- And the section "SETUP LOGROTATE" in the upgrade script
+
+# Use logrotate to manage application logfile(s)
+ynh_use_logrotate
+
+#=================================================
+# ADVERTISE SERVICE IN ADMIN PANEL
+#=================================================
+
+### `yunohost service add` is a CLI yunohost command to add a service in the admin panel.
+### You'll find the service in the 'services' section of YunoHost admin panel.
+### This CLI command would be useless if the app does not have any services (systemd or sysvinit)
+### If you're not using these lines:
+###		- You can remove these files in conf/.
+###		- Remove the section "REMOVE SERVICE FROM ADMIN PANEL" in the remove script
+###		- As well as the section ADVERTISE SERVICE IN ADMIN PANEL" in the restore script
+
+#yunohost service add NAME_INIT.D --log "/var/log/FILE.log"
+
+#=================================================
+# SETUP SSOWAT
+#=================================================
+
+# Make app public if necessary
+if [ $is_public -eq 1 ]
 then
-sudo yunohost app setting $app skipped_uris -v "/"
+	# unprotected_uris allows SSO credentials to be passed anyway.
+	ynh_app_setting_set $app unprotected_uris "/"
 fi
 
-#A verifier? A integrer dans dépendances?
-#adding php-cli for cron
-sudo apt-get update -qq 
-sudo apt-get install -yqq php5-cli
-#adding cronjob for removing expired email addresses
-sudo echo "$cronline" | sudo tee -a /etc/cron.d/emailpoubelle 
-sudo chmod 644 /etc/cron.d/emailpoubelle 
+#=================================================
+# RELOAD NGINX
+#=================================================
 
-# Restart services
 systemctl reload nginx
-systemctl reload postfix
-sudo service php* reload
-sudo yunohost app ssowatconf
- 
