New nginx conf systemd

--- a/scripts/install
+++ b/scripts/install
@@ -139,7 +139,7 @@ ynh_system_user_create $app
 ###		- And the section "SETUP SYSTEMD" in the upgrade script
 
 # Create a dedicated systemd config
-#ynh_add_systemd_config
+ynh_add_systemd_config
 
 
 #=================================================
