--- a/scripts/install
+++ b/scripts/install
@@ -143,11 +143,11 @@ systemctl stop $app
 #set database settings as per conf file
 while IFS='' read -r line || [[ -n "$i" ]]; do
     sqlite3 $final_path/app.db "UPDATE settings SET $i WHERE ID=1"
-done < $(cat ../conf/init_calibre_db)
+done < <($(cat ../conf/init_calibre_db))
 
 while IFS='' read -r line || [[ -n "$i" ]]; do
     sqlite3 $final_path/app.db "UPDATE user SET $i WHERE ID=1"
-done < $(cat ../conf/init_calibre_db_user)
+done < <($(cat ../conf/init_calibre_db_user))
 
 
 
