--- a/scripts/install
+++ b/scripts/install
@@ -144,9 +144,7 @@ systemctl stop $app
 #set database settings as per conf file
 conf=$(. <(echo -E echo $(<../conf/init_calibre_db_settings)))
 echo $conf
-#sqlite3 ./app.db "UPDATE settings SET $conf WHERE ID=1"
-sqlite3 ./app.db "UPDATE settings SET calibre_dir=\"$calibre_dir\", calibre_port=$port WHERE ID=1"
-
+sqlite3 ./app.db "UPDATE settings SET $conf WHERE ID=1"
 
 conf=$(. <(echo -E echo $(<../conf/init_calibre_db_user)))
 sqlite3 $final_path/app.db "UPDATE user SET $conf WHERE ID=1"
