--- a/scripts/install
+++ b/scripts/install
@@ -25,7 +25,7 @@ path_url=$YNH_APP_ARG_PATH
 admin=$YNH_APP_ARG_ADMIN
 is_public=$YNH_APP_ARG_IS_PUBLIC
 language=$YNH_APP_ARG_LANGUAGE
-pass_hash=$(python ../conf/generate_password_hash.py $YNH_APP_ARG_PASSWORD $final_path/vendor)
+password=$YNH_APP_ARG_PASSWORD
 app=$YNH_APP_INSTANCE_NAME
 calibre_dir=$3
 
@@ -142,6 +142,8 @@ sleep 5s
 systemctl stop $app
 
 #set database settings as per conf file
+pass_hash=$(python ../conf/generate_password_hash.py $password $final_path/vendor)
+
 conf="\"UPDATE settings SET $(. <(echo -E echo $(<../conf/init_calibre_db_settings))) WHERE ID=1\""
 eval sqlite3 $final_path/app.db "$conf"
 
