--- a/scripts/install
+++ b/scripts/install
@@ -142,15 +142,13 @@ sleep 5s
 systemctl stop $app
 
 #set database settings as per conf file
-pass_hash=$(python ../conf/generate_password_hash.py $pass $final_path/vendor)
-
 conf="\"UPDATE settings SET $(. <(echo -E echo $(<../conf/init_calibre_db_settings))) WHERE ID=1\""
 eval sqlite3 $final_path/app.db "$conf"
 
 conf="\"UPDATE user SET $(. <(echo -E echo $(<../conf/init_calibre_db_user))) WHERE ID=1\""
-sleep 1s
 eval sqlite3 $final_path/app.db "$conf"
-sleep 1s
+
+#mise à jour du mot de passe (je ne sais pas pourquoi, je n'arrive pas à l'intégrer dans le fichier de conf, pb de " et ')
 sqlite3 $final_path/app.db "UPDATE user SET password='$(python ../conf/generate_password_hash.py $pass $final_path/vendor)' WHERE ID=1"
 
 
