--- a/scripts/install
+++ b/scripts/install
@@ -107,6 +107,7 @@ ynh_add_nginx_config
 
 # Create a system user
 ynh_system_user_create $app
+chown -R $app: $final_path
 
 #=================================================
 # SETUP SYSTEMD
