Root directory not allowed in nginx.conf

--- a/scripts/install
+++ b/scripts/install
@@ -97,6 +97,12 @@ pip install --target $final_path/vendor -r $final_path/requirements.txt
 #=================================================
 # NGINX CONFIGURATION
 #=================================================
+#Cannot use empty string for X-script-name
+if [ $path_url = "/" ] ; then
+	ynh_replace_string "        proxy_set_header        X-Script-Name   __PATH__;"
+					   "        proxy_set_header        X-Script-Name   /$app;"
+					   ../conf/nginx.conf
+fi
 
 # Create a dedicated nginx config
 ynh_add_nginx_config
