--- a/scripts/install
+++ b/scripts/install
@@ -99,9 +99,7 @@ pip install --target $final_path/vendor -r $final_path/requirements.txt
 #=================================================
 #Cannot use empty string for X-script-name
 if [ $path_url = "/" ] ; then
-	ynh_replace_string "        proxy_set_header        X-Script-Name   __PATH__;"
-					   "        proxy_set_header        X-Script-Name   /$app;"
-					   ../conf/nginx.conf
+	ynh_replace_string "X-Script-Name   __PATH__;" "X-Script-Name   /$app;" ../conf/nginx.conf
 fi
 
 # Create a dedicated nginx config
