--- a/scripts/install
+++ b/scripts/install
@@ -170,7 +170,7 @@ eval sqlite3 $final_path/app.db "$conf"
 
 #mise à jour du mot de passe (je ne sais pas pourquoi, je n'arrive pas à l'intégrer dans le fichier de conf, pb de " et ')
 ynh_print_OFF
-sqlite3 $final_path/app.db "UPDATE user SET password='$(python ../conf/generate_password_hash.py $pass $final_path/vendor)' WHERE ID=1"
+sqlite3 $final_path/app.db "UPDATE user SET password='$(python ../conf/generate_password_hash.py "$pass" $final_path/vendor)' WHERE ID=1"
 ynh_print_ON
 
 #=================================================
