Test integration Yunohost Multimedia

--- a/scripts/install
+++ b/scripts/install
@@ -111,6 +111,9 @@ ynh_add_nginx_config
 
 # Create a system user
 ynh_system_user_create $app
+#add user to multimedia group
+usermod -a -G multimedia $app
+
 chown -R $app: $final_path
 
 #=================================================
@@ -123,6 +126,9 @@ ynh_add_systemd_config
 #=================================================
 # CREATE FILES AND DIRECTORIES
 #=================================================
+
+# Build YunoHost multimedia directories
+ynh_multimedia_build_main_dir
 
 #Check if library folder exists. If not create it
 if [ ! -e "$calibre_dir" ]; then
