--- a/scripts/install
+++ b/scripts/install
@@ -158,10 +158,11 @@ chown -R $app:$app /var/log/$app
 
 ynh_print_info "Setting up database and settings"
 #we need to start and stop the service so that initial app.db file is created and that we can set default data
-systemctl start $app
+ynh_systemd_action -l "INFO in server: Starting Gevent server"
 #sleep required on low spec like raspberryPi
-sleep 5s
-systemctl stop $app
+sleep 1s
+ynh_systemd_action -a stop
+
 
 #set database settings as per conf file
 conf="\"UPDATE settings SET $(. <(echo -E echo $(<../conf/init_calibre_db_settings))) WHERE ID=1\""
@@ -216,7 +217,6 @@ fi
 #=================================================
 ynh_print_info "Reload nginx and start $app"
 systemctl reload nginx
-#systemctl start $app
 ynh_systemd_action -l "INFO in server: Starting Gevent server"
 
 #=================================================
