Download from app.src

--- a/scripts/install
+++ b/scripts/install
@@ -80,9 +80,9 @@ ynh_print_info "Copying data to $final_path"
 # Download, check integrity, uncompress and patch the source from app.src
 #as long as v1 is not reached, sha256sum will change without notice so not usable, so we use cp -a instead.
 #source are directly in the app so far
-#ynh_setup_source "$final_path"
+ynh_setup_source "$final_path"
 
-cp -a ../src/calibreweb/. $final_path
+#cp -a ../src/calibreweb/. $final_path
 
 #=================================================
 # INSTALL DEPENDENCIES
