--- a/scripts/install
+++ b/scripts/install
@@ -120,6 +120,7 @@ ynh_add_systemd_config
 # CREATE FILES AND DIRECTORIES
 #=================================================
 
+
 #Check if library folder exists. If not create it
 if [ ! -e "$calibre_dir" ]; then
 	ynh_print_info "Create calibre library folder $calibre_dir"
@@ -133,6 +134,9 @@ if [ ! -e "$calibre_dir"/metadata.db ]; then
 	chown $app:$app $calibre_dir/*
 fi
 
+
+ynh_multimedia_build_main_dir
+ynh_multimedia_addfolder "eBook" "$calibre_dir"
 
 
 #=================================================
